# Hypothesis-intelligence-engine

./: .gitignore  DATA_EXPLAINED.md  Dockerfile  README.md  accuracy.py  app.py  benchmark_eval.py  client.py  env.py  inference.py  notebookmain.py  openenv.yaml  pyproject.toml  requirements.txt
Hypothesis/: .gitignore  README.md  __init__.py  app.py  client.py  env.py  inference.py  pyproject.toml
Hypothesis/server/: app.py  env.py  grader.py
server/: agent.py  app.py  env.py  grader.py  inference.py
